--- a/pak-ios/storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/pak-ios/storyboards/Base.lproj/LaunchScreen.storyboard
@@ -14,11 +14,22 @@
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
+                    <view key="view" contentMode="scaleToFill" id="mj7-yo-ehg">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dwb-pak-splash-1" translatesAutoresizingMaskIntoConstraints="NO" id="ETv-qw-kX9" userLabel="iv_logo_pak">
+                                <rect key="frame" x="115" y="271" width="145" height="125"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <constraints>
+                            <constraint firstItem="Yg1-vV-sXx" firstAttribute="bottom" secondItem="ETv-qw-kX9" secondAttribute="bottom" constant="271" id="L0C-qF-qgf"/>
+                            <constraint firstItem="ETv-qw-kX9" firstAttribute="top" secondItem="Yg1-vV-sXx" secondAttribute="top" constant="251" id="LGp-Bc-FLz"/>
+                            <constraint firstItem="ETv-qw-kX9" firstAttribute="leading" secondItem="Yg1-vV-sXx" secondAttribute="leading" constant="115" id="hRh-ko-rHH"/>
+                            <constraint firstItem="Yg1-vV-sXx" firstAttribute="trailing" secondItem="ETv-qw-kX9" secondAttribute="trailing" constant="115" id="z6j-CP-G8N"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Yg1-vV-sXx"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -26,4 +37,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="dwb-pak-splash-1" width="134" height="117"/>
+    </resources>
 </document>
